--- a/indexafterlogin.html
+++ b/indexafterlogin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Utama - Codeing Class</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-white">
     <!-- Navbar -->
@@ -13,14 +14,27 @@
             <h1 class="text-white text-2xl font-bold"></h1>
             <div class="space-x-4">
                 <a href="index.html" class="text-white hover:text-blue-200">Home</a>
-                <a href="#" class="text-white hover:text-blue-200">Class</a>
-                <a href="#" class="text-white hover:text-blue-200">Contact Us</a>
+                <a href="#" class="text-white hover:text-blue-200">About</a>
+                <a href="#" id="contactUsBtn" class="text-white hover:text-blue-200">Contact Us</a>
                 <a href="#" class="text-white hover:underline">🛒</a>
                 <a href="#" class="text-white hover:underline">🔔</a>
                 <a href="#" class="bg-white font-bold text-blue-600 px-3 py-2 rounded-md hover:bg-blue-200">👤 User</a>
             </div>
         </div>
     </nav>
+
+    <div id="popup" class="popup-overlay">
+        <div class="popup-content">
+            <button class="close-btn" onclick="closePopup()">&times;</button>
+            <p class="contact-text">Contact Us in here</p>
+            <div class="contact-icons">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+                <img src="https://upload.wikimedia.org/wikipedia/en/9/98/Discord_logo.svg" alt="Discord">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub">
+            </div>
+        </div>
+    </div>
 
     <!-- Hero Section -->
     <section class="flex flex-col items-center justify-center py-20">
@@ -44,7 +58,12 @@
         function goToHome() {
             window.location.href = "mainhomepage.html"; 
         }
-    
+        document.getElementById("contactUsBtn").onclick = function() {
+            document.getElementById("popup").style.display = "flex";
+        }
+        function closePopup() {
+            document.getElementById("popup").style.display = "none";
+        }
     </script>
 </body>
 </html>
