--- a/indexafterlogin.html
+++ b/indexafterlogin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Utama - Codeing Class</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,12 +14,14 @@
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-white text-2xl font-bold"></h1>
             <div class="space-x-4">
-                <a href="index.html" class="text-white hover:text-blue-200">Home</a>
+                <a href="indexafterlogin.html" class="text-white hover:text-blue-200">Home</a>
                 <a href="#" class="text-white hover:text-blue-200">About</a>
                 <a href="#" id="contactUsBtn" class="text-white hover:text-blue-200">Contact Us</a>
-                <a href="#" class="text-white hover:underline">🛒</a>
-                <a href="#" class="text-white hover:underline">🔔</a>
-                <a href="#" class="bg-white font-bold text-blue-600 px-3 py-2 rounded-md hover:bg-blue-200">👤 User</a>
+                <a href="keranjang.html" class="icon-link">
+                    <i class="fas fa-shopping-cart icon"></i>
+                </a>
+                <i class="fas fa-bell icon"></i>
+                <a href="#" class="bg-white font-bold text-blue-600 px-3 py-2 rounded-md hover:bg-blue-200"><i class="fas fa-user"></i> User</a>
             </div>
         </div>
     </nav>
@@ -56,7 +59,7 @@
     </section>
     <script>
         function goToHome() {
-            window.location.href = "mainhomepage.html"; 
+            window.location.href = "mainhomepageafterlogin.html"; 
         }
         document.getElementById("contactUsBtn").onclick = function() {
             document.getElementById("popup").style.display = "flex";
