--- a/classafterlogin.html
+++ b/classafterlogin.html
@@ -7,6 +7,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+    <script src="firebase-config.js"></script>
+    <script defer src="productpage.js"></script>
+    <script defer src="class.js"></script>
 </head>
 <body class="bg-white">
     <!-- Navbar -->
@@ -62,7 +68,7 @@
             <div class="mt-4">
                 <p class="text-lg font-semibold">Rp.100.000,00</p>
                 <div class="flex space-x-2 mt-2">
-                    <button class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-800"onclick="goToCart()">Tambahkan ke keranjang</button>
+                    <button class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-800">Tambahkan ke keranjang</button>
                     <button class="border-2 border-blue-600 text-blue-600 px-4 py-2 rounded-md hover:bg-blue-600 hover:text-white">Hubungi Mentor</button>
                 </div>
             </div>
@@ -70,7 +76,9 @@
 
         <!-- Konten Kursus -->
         <div class="w-3/4 p-4">
-            <div class="bg-blue-200 h-64 rounded-lg mb-4"></div>
+            <div id="videoContainer" class="bg-blue-200 h-64 rounded-lg mb-4 flex justify-center items-center">
+                <video id="courseVideo" controls class="w-full h-full hidden"></video>
+            </div>
             <h2 class="text-4xl font-bold mb-4">Welcome to Codeing Class</h2>
             <p class="mb-2 font-semibold">Kursus Diperbarui, Maret 2025</p>
             <p class="text-lg mb-6">Kursus Pemrograman Web: Full-Stack Development dengan Next.js & TypeScript</p>
@@ -88,9 +96,6 @@
     <script>
         function goToClass() {
             window.location.href = "class.html"; 
-        }
-        function goToCart() {
-            window.location.href = "keranjang.html"; 
         }
         function goToProduct() {
             window.location.href = "productpage.html"; 
