--- a/keranjang.html
+++ b/keranjang.html
@@ -7,6 +7,11 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+    <script src="firebase-config.js"></script>
+    <script defer src="cart.js"></script>
 </head>
 <body>
     <nav class="bg-blue-600 p-4">
@@ -34,7 +39,7 @@
             <!-- Item akan ditambahkan di sini secara dinamis -->
         </div>
 
-        <button id="add-course">Tambah Kursus</button>
+        <button id="add-course">Cari Kursus</button>
     </div>
 
     <script src="cart.js"></script>
