--- a/classafterlogin.html
+++ b/classafterlogin.html
@@ -27,7 +27,7 @@
                     <i class="fas fa-shopping-cart icon"></i>
                 </a>
                 <i class="fas fa-bell icon"></i>
-                <a href="#" class="bg-white font-bold text-blue-600 px-3 py-2 rounded-md hover:bg-blue-200"><i class="fas fa-user"></i> User</a>
+                <a href="profile.html" class="bg-white font-bold text-blue-600 px-3 py-2 rounded-md hover:bg-blue-200"><i class="fas fa-user"></i> User</a>
             </div>
         </div>
     </nav>
