--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="text-white text-2xl font-bold"></h1>
             <div class="space-x-4">
                 <a href="index.html" class="text-white hover:text-blue-200">Home</a>
-                <a href="#" class="text-white hover:text-blue-200">About</a>
+                <a href="about.html" class="text-white hover:text-blue-200">About</a>
                 <a href="#" id="contactUsBtn" class="text-white hover:text-blue-200">Contact Us</a>
                 <a href="login.html" class="text-white hover:text-blue-200">Login</a>
                 <a href="register.html" class="bg-white text-blue-600 px-3 py-2 rounded-md hover:bg-blue-200">Sign Up</a>
@@ -44,7 +44,7 @@
                 <p class="text-lg mb-6">Jadi Programmer dengan Koneksi dan Peluang Karier Seumur Hidup</p>
                 <p class="text-gray-600 mb-4">Startup inovatif dengan solusi terdepan, berkembang pesat sejak awal dengan dukungan berkelanjutan seumur hidup.</p>
                 <div class="space-x-4">
-                    <button class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-800">Hubungi kami</button>
+                    <button id="contactUsBtn" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-800">Hubungi kami</button>
                     <button class="border-2 border-blue-600 text-blue-600 px-4 py-2 rounded-md hover:bg-blue-600 hover:text-white"onclick="goToHome()">Lihat Course</button>
                 </div>
             </div>
