--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
             <h1 class="text-white text-2xl font-bold">Codeing Class</h1>
             <div class="space-x-4">
                 <a href="index.html" class="text-white hover:text-blue-200">Home</a>
-                <a href="#" class="text-white hover:text-blue-200">About</a>
+                <a href="about.html" class="text-white hover:text-blue-200">About</a>
                 <a href="#" id="contactUsBtn" class="text-white hover:text-blue-200">Contact Us</a>
                 <a href="login.html" class="text-white hover:text-blue-200">Login</a>
             </div>
