--- a/profile.html
+++ b/profile.html
@@ -61,6 +61,22 @@
         <button onclick="window.location.href='editprofile.html'" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition">Edit Profil</button>
       </div>
     </div>
+
+    <div id="ratingModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+      <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
+          <h2 class="text-xl font-bold mb-4">Beri Rating</h2>
+          <p id="ratingCourseId" class="text-sm text-gray-600 mb-2"></p>
+          <label for="ratingValue" class="block mb-2">Rating (1 - 5):</label>
+          <input type="number" id="ratingValue" min="1" max="5" class="w-full border rounded p-2 mb-4">
+          <label class="block mb-2">Komentar</label>
+          <textarea id="ratingComment" rows="3" class="border p-2 rounded w-full mb-4" placeholder="Tulis pendapatmu tentang course ini..."></textarea>
+
+          <div class="flex justify-end gap-3">
+
+          <button onclick="submitRating()" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Kirim</button>
+          <button onclick="closeRatingModal()" class="ml-2 text-gray-500 hover:underline">Batal</button>
+      </div>
+    </div>
   </main>
 
   <!-- Footer opsional -->
@@ -68,6 +84,53 @@
 
   <!-- Firebase + Dynamic Card Script -->
   <script>
+    let currentCourseId = null;
+
+    function openRatingModal(courseId) {
+        currentCourseId = courseId;
+        document.getElementById("ratingModal").classList.remove("hidden");
+        document.getElementById("ratingModal").classList.add("flex");
+        document.getElementById("ratingCourseId").textContent = "Untuk Course ID: " + courseId;
+    }
+
+    function closeRatingModal() {
+        document.getElementById("ratingModal").classList.add("hidden");
+        document.getElementById("ratingModal").classList.remove("flex");
+        currentCourseId = null;
+    }
+
+    function submitRating() {
+    const rating = parseInt(document.getElementById("ratingValue").value);
+    const comment = document.getElementById("ratingComment").value.trim();
+    const user = firebase.auth().currentUser;
+
+    if (!user || !currentCourseId || isNaN(rating) || rating < 1 || rating > 5) {
+        alert("Mohon isi rating antara 1 - 5");
+        return;
+    }
+
+    const ratingData = {
+        rating: rating,
+        comment: comment || "", // Bisa kosong kalau tidak diisi
+        courseId: currentCourseId,
+        userId: user.uid,
+        timestamp: Date.now()
+    };
+
+    firebase.database().ref("ratings").push(ratingData)
+        .then(() => {
+            alert("Terima kasih atas rating dan komentarnya!");
+            closeRatingModal();
+
+            // Reset input setelah submit
+            document.getElementById("ratingValue").value = "";
+            document.getElementById("ratingComment").value = "";
+        })
+        .catch((error) => {
+            console.error("Gagal menyimpan rating:", error);
+        });
+    }
+
     firebase.auth().onAuthStateChanged(function(user) {
     if (user) {
         const userId = user.uid;
@@ -90,11 +153,15 @@
             card.className = "bg-blue-50 rounded-xl p-4 shadow-md text-center";
 
             card.innerHTML = `
-            <div class="bg-blue-400 h-32 rounded-lg mb-3"></div>
-            <p class="text-sm font-semibold text-gray-800 mb-2">${item.price}</p>
-            <p class="text-gray-600 text-sm">${item.description}</p>
+                <div class="bg-blue-400 h-32 rounded-lg mb-3"></div>
+                <p class="text-sm font-semibold text-gray-800 mb-2">${item.price}</p>
+                <p class="text-gray-600 text-sm">${item.description}</p>
+                <button 
+                    class="mt-3 bg-yellow-400 hover:bg-yellow-500 text-white font-semibold py-1 px-3 rounded" 
+                    onclick="openRatingModal('${item.courseId}')">
+                    Beri Rating
+                </button>
             `;
-
             gridContainer.appendChild(card);
         });
 
