--- a/profile.html
+++ b/profile.html
@@ -149,26 +149,40 @@
         // Tampilkan semua kelas yang dibeli
         const history = data.checkoutHistory || {};
         Object.values(history).forEach(item => {
-            const card = document.createElement("div");
-            card.className = "bg-blue-50 rounded-xl p-4 shadow-md text-center";
+        const courseId = item.courseId;
 
-            card.innerHTML = `
-                <div class="bg-blue-400 h-32 rounded-lg mb-3"></div>
-                <p class="text-sm font-semibold text-gray-800 mb-2">${item.price}</p>
-                <p class="text-gray-600 text-sm">${item.description}</p>
-                <button 
-                    class="mt-3 bg-yellow-400 hover:bg-yellow-500 text-white font-semibold py-1 px-3 rounded" 
-                    onclick="openRatingModal('${item.courseId}')">
-                    Beri Rating
-                </button>
-            `;
-            gridContainer.appendChild(card);
+        firebase.database().ref("courses/" + courseId).once("value").then(courseSnapshot => {
+          const courseData = courseSnapshot.val();
+          const thumbnailUrl = courseData?.thumbnailUrl || "https://via.placeholder.com/150";
+
+          const card = document.createElement("div");
+          card.className = "bg-blue-50 rounded-xl p-4 shadow-md text-center";
+
+          card.innerHTML = `
+            <div class="h-32 rounded-lg mb-3 overflow-hidden">
+              <img src="${thumbnailUrl}" alt="Thumbnail" class="object-cover w-full h-full rounded-lg">
+            </div>
+            <p class="text-sm font-semibold text-gray-800 mb-2">${item.price}</p>
+            <p class="text-gray-600 text-sm">${item.description}</p>
+            <button 
+                class="mt-3 bg-blue-400 hover:bg-blue-500 text-white font-semibold py-1 px-3 rounded"> 
+                Lihat Materi
+            </button>
+            <button 
+                class="mt-3 bg-yellow-400 hover:bg-yellow-500 text-white font-semibold py-1 px-3 rounded" 
+                onclick="openRatingModal('${courseId}')">
+                Beri Rating
+            </button>
+          `;
+
+          gridContainer.appendChild(card);
+        }).catch(error => {
+          console.error("Gagal mengambil data course:", error);
         });
-
+      });
         }).catch(function(error) {
-        console.error("Gagal memuat data user:", error);
-        });
-
+          console.error("Gagal memuat data user:", error);
+      });
     } else {
         // User belum login
         console.log("User belum login.");
