--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             window.location.href = "mainhomepage.html"; 
         }
         function goToChat() {
-            window.location.href = "chatbot.html"; 
+            window.location.href = "chatadmin.html"; 
         }
         document.getElementById("contactUsBtn").onclick = function() {
             document.getElementById("popup").style.display = "flex";
