--- a/indexafterlogin.html
+++ b/indexafterlogin.html
@@ -62,7 +62,7 @@
             window.location.href = "mainhomepageafterlogin.html"; 
         }
         function goToChat() {
-            window.location.href = "chatbot.html"; 
+            window.location.href = "chatadmin.html"; 
         }
         document.getElementById("contactUsBtn").onclick = function() {
             document.getElementById("popup").style.display = "flex";
