--- a/classafterlogin.html
+++ b/classafterlogin.html
@@ -69,7 +69,7 @@
                 <p class="text-lg font-semibold">Rp.100.000,00</p>
                 <div class="flex space-x-2 mt-2">
                     <button class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-800">Tambahkan ke keranjang</button>
-                    <button class="border-2 border-blue-600 text-blue-600 px-4 py-2 rounded-md hover:bg-blue-600 hover:text-white">Hubungi Mentor</button>
+                    <button class="border-2 border-blue-600 text-blue-600 px-4 py-2 rounded-md hover:bg-blue-600 hover:text-white"onclick="goToChat()">Hubungi Mentor</button>
                 </div>
             </div>
         </div>
@@ -96,6 +96,9 @@
     <script>
         function goToClass() {
             window.location.href = "class.html"; 
+        }
+        function goToChat() {
+            window.location.href = "chatadmin.html"; 
         }
         function goToProduct() {
             window.location.href = "productpage.html"; 
