--- a/profile.html
+++ b/profile.html
@@ -54,8 +54,8 @@
 
       <!-- Profil Samping -->
       <div class="flex flex-col items-center w-full md:w-1/3 mt-8 md:mt-0">
-        <div class="w-40 h-40 rounded-full border-2 border-blue-600 flex items-center justify-center text-blue-600 text-6xl mb-4">
-          👤
+        <div class="w-40 h-40 rounded-full border-2 border-blue-600 mb-4 overflow-hidden">
+          <img id="profileImage" class="w-full h-full object-cover" src="https://via.placeholder.com/150" alt="Foto Profil">
         </div>
         <button onclick="window.location.href='editprofile.html'" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition">Edit Profil</button>
       </div>
@@ -84,6 +84,22 @@
   <!-- Firebase + Dynamic Card Script -->
   <script>
     let currentCourseId = null;
+
+    firebase.auth().onAuthStateChanged((user) => {
+        if (user) {
+          const userRef = firebase.database().ref("users/" + user.uid);
+          userRef.once("value").then((snapshot) => {
+            const data = snapshot.val();
+            const profilePicUrl = data?.profilePicture;
+
+            if (profilePicUrl) {
+              const profileImage = document.getElementById("profileImage");
+              profileImage.src = profilePicUrl;
+              profileImage.style.display = "block";
+            }
+          });
+        }
+      });
 
     function openRatingModal(courseId) {
         currentCourseId = courseId;
