--- a/aboutafterlogin.html
+++ b/aboutafterlogin.html
@@ -145,13 +145,15 @@
 <body>
     <nav class="bg-blue-600 p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-white text-2xl font-bold"></h1>
+            <h1 class="text-white text-2xl font-bold">Codeing Class</h1>
             <div class="space-x-4">
                 <a href="index.html" class="text-white hover:text-blue-200">Home</a>
-                <a href="about.html" class="text-white hover:text-blue-200">About</a>
+                <a href="#" class="text-white hover:text-blue-200">About</a>
                 <a href="#" id="contactUsBtn" class="text-white hover:text-blue-200">Contact Us</a>
-                <a href="login.html" class="text-white hover:text-blue-200">Login</a>
-                <a href="register.html" class="bg-white text-blue-600 px-3 py-2 rounded-md hover:bg-blue-200">Sign Up</a>
+                <a href="keranjang.html" class="icon-link">
+                    <i class="fas fa-shopping-cart icon"></i>
+                </a>
+                <a href="profile.html" class="bg-white font-bold text-blue-600 px-3 py-2 rounded-md hover:bg-blue-200"><i class="fas fa-user"></i> User</a>
             </div>
         </div>
     </nav>
