--- a/keranjang.html
+++ b/keranjang.html
@@ -19,7 +19,7 @@
             <h1 class="text-white text-2xl font-bold"></h1>
             <div class="space-x-4">
                 <a href="indexafterlogin.html" class="text-white hover:text-blue-200">Home</a>
-                <a href="about.html" class="text-white hover:text-blue-200">About</a>
+                <a href="aboutafterlogin.html" class="text-white hover:text-blue-200">About</a>
                 <a href="#" id="contactUsBtn" class="text-white hover:text-blue-200">Contact Us</a>
                 <a href="keranjang.html" class="icon-link">
                     <i class="fas fa-shopping-cart icon"></i>
