--- a/mainhomepageafterlogin.html
+++ b/mainhomepageafterlogin.html
@@ -42,6 +42,23 @@
             </div>
         </div>
     </div>
+
+    <div class="container mx-auto px-4">
+        <div class="flex flex-col md:flex-row justify-between items-stretch mt-6 mb-4 gap-4">
+            <div class="w-full md:w-[48%]">
+                <input type="text" id="searchInput" placeholder="Cari course..." class="w-full h-full p-2 border border-gray-300 rounded shadow-sm">
+            </div>
+            
+            <div class="w-full md:w-[30%]">
+                <select id="sortSelect" class="w-full h-full p-2 border border-gray-300 rounded shadow-sm">
+                    <option value="az">A-Z</option>
+                    <option value="za">Z-A</option>
+                    <option value="lowPrice">Harga Terendah</option>
+                    <option value="highPrice">Harga Tertinggi</option>
+                </select>
+            </div>
+        </div>
+    </div>
     
     <!-- Main Content -->
     <div class="container">
