--- a/profile.html
+++ b/profile.html
@@ -114,6 +114,10 @@
         currentCourseId = null;
     }
 
+    function goToMateri(courseId) {
+        window.location.href = `materi.html?courseId=${courseId}`;
+    }
+
     function submitRating() {
     const rating = parseInt(document.getElementById("ratingValue").value);
     const comment = document.getElementById("ratingComment").value.trim();
@@ -180,7 +184,8 @@
             <p class="text-sm font-semibold text-gray-800 mb-2">${item.price}</p>
             <p class="text-gray-600 text-sm">${item.description}</p>
             <button 
-                class="mt-3 bg-blue-400 hover:bg-blue-500 text-white font-semibold py-1 px-3 rounded"> 
+                class="mt-3 bg-blue-400 hover:bg-blue-500 text-white font-semibold py-1 px-3 rounded"
+                onclick="goToMateri('${courseId}')">
                 Lihat Materi
             </button>
             <button 
